<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/calendarFragment"
        android:title="@string/calendar"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_calendar"
        />
    <item
        android:id="@+id/paymentsFragment"
        android:title="@string/payments"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_paymnets"
        />
    <item
        android:id="@+id/chatFragment"
        android:title="@string/chat"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_chat"
        />
    <item
        android:id="@+id/notificationsFragment"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_notifications"/>
    <item
        android:id="@+id/menuFragment"
        android:title="@string/more"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_expand_menu"/>


</menu>