<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/calendarFragment">
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.msprysak.rentersapp.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.msprysak.rentersapp.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.msprysak.rentersapp.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications_list" />
    <fragment
        android:id="@+id/paymentsFragment"
        android:name="com.msprysak.rentersapp.ui.payments.PaymentsFragment"
        android:label="@string/payments"
        tools:layout="@layout/fragment_payments" />
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.msprysak.rentersapp.ui.menu.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_menuFragment_to_addUsersFragment"
            app:destination="@id/addUsersFragment" />
        <action
            android:id="@+id/action_menuFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_menuFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/addUsersFragment"
        android:name="com.msprysak.rentersapp.ui.addusers.AddUsersFragment"
        android:label="Dodaj użytkowników"
        tools:layout="@layout/fragment_add_users" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.msprysak.rentersapp.ui.profile.ProfileFragment"
        android:label="ProfileFragment" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.msprysak.rentersapp.ui.home.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" />
</navigation>