<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tenant_profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_account_circle"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tenant_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tenant_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/sent_payment_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sent_date"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tenant_username"
            app:layout_constraintStart_toEndOf="@id/tenant_profile_picture"
            />

        <TextView
            android:id="@+id/sent_payment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_date"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/sent_payment_date_label"
            app:layout_constraintBottom_toBottomOf="@id/sent_payment_date_label"
            app:layout_constraintStart_toEndOf="@id/sent_payment_date_label"
            />


        <TextView
            android:id="@+id/payment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tenant_profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/payment_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_amount"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_title"
            />
        <TextView
            android:id="@+id/payment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000 zł"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@id/payment_amount_label"
            app:layout_constraintTop_toTopOf="@id/payment_amount_label"
            app:layout_constraintBottom_toBottomOf="@id/payment_amount_label"
            />

        <TextView
            android:id="@+id/payment_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_amount_label"
            app:layout_constraintEnd_toStartOf="@id/payment_status"
            />
        <TextView
            android:id="@+id/payment_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Opłacono"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@id/payment_status_label"
            app:layout_constraintTop_toTopOf="@id/payment_status_label"
            app:layout_constraintBottom_toBottomOf="@id/payment_status_label"

            />
        <TextView
            android:id="@+id/payment_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"

            android:text="@string/payment_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_status_label"
            />
        <TextView
            android:id="@+id/payment_date_since_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/since"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_date_label"/>
        <TextView
            android:id="@+id/payment_date_since"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textStyle="bold"

            android:text="@string/sample_date"
            app:layout_constraintStart_toEndOf="@id/payment_date_since_label"
            app:layout_constraintTop_toTopOf="@id/payment_date_since_label"
            app:layout_constraintBottom_toBottomOf="@id/payment_date_since_label"
            />
        <TextView
            android:id="@+id/payment_date_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/until"
            app:layout_constraintEnd_toEndOf="@id/payment_date_label"
            app:layout_constraintTop_toBottomOf="@id/payment_date_label"/>

        <TextView
            android:id="@+id/payment_date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/sample_date"
            app:layout_constraintStart_toEndOf="@id/payment_date_to_label"
            app:layout_constraintTop_toTopOf="@id/payment_date_to_label"
            app:layout_constraintBottom_toBottomOf="@id/payment_date_to_label"
            />

        <Button
            android:id="@+id/payment_paid_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/paid"
            app:layout_constraintTop_toBottomOf="@id/payment_date_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>